Fix broken layout when viewport width under 1200px

--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -136,7 +136,9 @@ header {
 
 .blog-post h2 {
     color: #0085a3;
-    word-wrap:break-word;
+    word-wrap: break-word;
+    font-size: 20px;
+    line-height: 1.5;
 }
 
 .blog-post h2 a {
